# code-fun

./: CMakeLists.txt  CMakePresets.json  README.md
base/base/: align.h  comparable.h  memory.h  template_util.h
base/include/: comparable.h
binary_tree/: CMakeLists.txt  base.h
binary_tree/binary_tree/: treap.h  tree.h
binary_tree/include/: treap.h  tree.h
lib/: googletest
src/: align_test.cc  binary_tree_test.cc  mem_leak.cc
